Start using Helm.
I hope I can remember all of the extra commands I just added.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "lisp/tuareg"]
 	path = lisp/tuareg
 	url = git@github.com:ocaml/tuareg.git
+[submodule "lisp/emacs-async"]
+	path = lisp/emacs-async
+	url = git@github.com:jwiegley/emacs-async.git
+[submodule "lisp/helm"]
+	path = lisp/helm
+	url = https://github.com/emacs-helm/helm.git
