--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lisp/helm"]
 	path = lisp/helm
 	url = https://github.com/emacs-helm/helm.git
+[submodule "lisp/helm-swoop"]
+	path = lisp/helm-swoop
+	url = git@github.com:ShingoFukuyama/helm-swoop.git
