--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "lisp/helm-company"]
 	path = lisp/helm-company
 	url = https://github.com/yasuyk/helm-company
+[submodule "lisp/helm-descbinds"]
+	path = lisp/helm-descbinds
+	url = git@github.com:emacs-helm/helm-descbinds.git
