--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "themes/emacs-theme-darktooth"]
 	path = themes/emacs-theme-darktooth
 	url = git@github.com:bryangarza/emacs-theme-darktooth.git
+[submodule "themes/tao-theme-emacs"]
+	path = themes/tao-theme-emacs
+	url = https://github.com/11111000000/tao-theme-emacs.git
