Add changes so far at Amazon (especially switching back to Helm)

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ ido.last
 /bryan-bak
 unused.el
 ideas-for-hangout-topics.org
+/helm-adaptive-history
+/projectile-bookmarks.eld
+/network-security.data
